--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack & npx next-video sync -w",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint"
@@ -17,6 +17,7 @@
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "next-themes": "^0.4.6",
+    "next-video": "^2.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sonner": "^2.0.7",
