--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-video": "^2.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.65.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
